--- a/notebooks/Hist_Cancer_Detection.ipynb
+++ b/notebooks/Hist_Cancer_Detection.ipynb
@@ -25,22 +25,19 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "heading_collapsed": true
-   },
+   "metadata": {},
    "source": [
     "## Packages and other dependencies"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 8,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-10-21T06:16:39.583429Z",
-     "start_time": "2019-10-21T06:16:38.243886Z"
-    },
-    "hidden": true
+     "end_time": "2019-10-23T03:13:18.188265Z",
+     "start_time": "2019-10-23T03:13:16.715773Z"
+    }
    },
    "outputs": [
     {
@@ -48,29 +45,29 @@
      "output_type": "stream",
      "text": [
       "Using TensorFlow backend.\n",
-      "/home/bithika/local/anaconda3/envs/tf_gpu/lib/python3.7/site-packages/tensorflow/python/framework/dtypes.py:516: FutureWarning: Passing (type, 1) or '1type' as a synonym of type is deprecated; in a future version of numpy, it will be understood as (type, (1,)) / '(1,)type'.\n",
+      "/home/bithika/local/anaconda3/lib/python3.7/site-packages/tensorflow/python/framework/dtypes.py:516: FutureWarning: Passing (type, 1) or '1type' as a synonym of type is deprecated; in a future version of numpy, it will be understood as (type, (1,)) / '(1,)type'.\n",
       "  _np_qint8 = np.dtype([(\"qint8\", np.int8, 1)])\n",
-      "/home/bithika/local/anaconda3/envs/tf_gpu/lib/python3.7/site-packages/tensorflow/python/framework/dtypes.py:517: FutureWarning: Passing (type, 1) or '1type' as a synonym of type is deprecated; in a future version of numpy, it will be understood as (type, (1,)) / '(1,)type'.\n",
+      "/home/bithika/local/anaconda3/lib/python3.7/site-packages/tensorflow/python/framework/dtypes.py:517: FutureWarning: Passing (type, 1) or '1type' as a synonym of type is deprecated; in a future version of numpy, it will be understood as (type, (1,)) / '(1,)type'.\n",
       "  _np_quint8 = np.dtype([(\"quint8\", np.uint8, 1)])\n",
-      "/home/bithika/local/anaconda3/envs/tf_gpu/lib/python3.7/site-packages/tensorflow/python/framework/dtypes.py:518: FutureWarning: Passing (type, 1) or '1type' as a synonym of type is deprecated; in a future version of numpy, it will be understood as (type, (1,)) / '(1,)type'.\n",
+      "/home/bithika/local/anaconda3/lib/python3.7/site-packages/tensorflow/python/framework/dtypes.py:518: FutureWarning: Passing (type, 1) or '1type' as a synonym of type is deprecated; in a future version of numpy, it will be understood as (type, (1,)) / '(1,)type'.\n",
       "  _np_qint16 = np.dtype([(\"qint16\", np.int16, 1)])\n",
-      "/home/bithika/local/anaconda3/envs/tf_gpu/lib/python3.7/site-packages/tensorflow/python/framework/dtypes.py:519: FutureWarning: Passing (type, 1) or '1type' as a synonym of type is deprecated; in a future version of numpy, it will be understood as (type, (1,)) / '(1,)type'.\n",
+      "/home/bithika/local/anaconda3/lib/python3.7/site-packages/tensorflow/python/framework/dtypes.py:519: FutureWarning: Passing (type, 1) or '1type' as a synonym of type is deprecated; in a future version of numpy, it will be understood as (type, (1,)) / '(1,)type'.\n",
       "  _np_quint16 = np.dtype([(\"quint16\", np.uint16, 1)])\n",
-      "/home/bithika/local/anaconda3/envs/tf_gpu/lib/python3.7/site-packages/tensorflow/python/framework/dtypes.py:520: FutureWarning: Passing (type, 1) or '1type' as a synonym of type is deprecated; in a future version of numpy, it will be understood as (type, (1,)) / '(1,)type'.\n",
+      "/home/bithika/local/anaconda3/lib/python3.7/site-packages/tensorflow/python/framework/dtypes.py:520: FutureWarning: Passing (type, 1) or '1type' as a synonym of type is deprecated; in a future version of numpy, it will be understood as (type, (1,)) / '(1,)type'.\n",
       "  _np_qint32 = np.dtype([(\"qint32\", np.int32, 1)])\n",
-      "/home/bithika/local/anaconda3/envs/tf_gpu/lib/python3.7/site-packages/tensorflow/python/framework/dtypes.py:525: FutureWarning: Passing (type, 1) or '1type' as a synonym of type is deprecated; in a future version of numpy, it will be understood as (type, (1,)) / '(1,)type'.\n",
+      "/home/bithika/local/anaconda3/lib/python3.7/site-packages/tensorflow/python/framework/dtypes.py:525: FutureWarning: Passing (type, 1) or '1type' as a synonym of type is deprecated; in a future version of numpy, it will be understood as (type, (1,)) / '(1,)type'.\n",
       "  np_resource = np.dtype([(\"resource\", np.ubyte, 1)])\n",
-      "/home/bithika/local/anaconda3/envs/tf_gpu/lib/python3.7/site-packages/tensorboard/compat/tensorflow_stub/dtypes.py:541: FutureWarning: Passing (type, 1) or '1type' as a synonym of type is deprecated; in a future version of numpy, it will be understood as (type, (1,)) / '(1,)type'.\n",
+      "/home/bithika/local/anaconda3/lib/python3.7/site-packages/tensorboard/compat/tensorflow_stub/dtypes.py:541: FutureWarning: Passing (type, 1) or '1type' as a synonym of type is deprecated; in a future version of numpy, it will be understood as (type, (1,)) / '(1,)type'.\n",
       "  _np_qint8 = np.dtype([(\"qint8\", np.int8, 1)])\n",
-      "/home/bithika/local/anaconda3/envs/tf_gpu/lib/python3.7/site-packages/tensorboard/compat/tensorflow_stub/dtypes.py:542: FutureWarning: Passing (type, 1) or '1type' as a synonym of type is deprecated; in a future version of numpy, it will be understood as (type, (1,)) / '(1,)type'.\n",
+      "/home/bithika/local/anaconda3/lib/python3.7/site-packages/tensorboard/compat/tensorflow_stub/dtypes.py:542: FutureWarning: Passing (type, 1) or '1type' as a synonym of type is deprecated; in a future version of numpy, it will be understood as (type, (1,)) / '(1,)type'.\n",
       "  _np_quint8 = np.dtype([(\"quint8\", np.uint8, 1)])\n",
-      "/home/bithika/local/anaconda3/envs/tf_gpu/lib/python3.7/site-packages/tensorboard/compat/tensorflow_stub/dtypes.py:543: FutureWarning: Passing (type, 1) or '1type' as a synonym of type is deprecated; in a future version of numpy, it will be understood as (type, (1,)) / '(1,)type'.\n",
+      "/home/bithika/local/anaconda3/lib/python3.7/site-packages/tensorboard/compat/tensorflow_stub/dtypes.py:543: FutureWarning: Passing (type, 1) or '1type' as a synonym of type is deprecated; in a future version of numpy, it will be understood as (type, (1,)) / '(1,)type'.\n",
       "  _np_qint16 = np.dtype([(\"qint16\", np.int16, 1)])\n",
-      "/home/bithika/local/anaconda3/envs/tf_gpu/lib/python3.7/site-packages/tensorboard/compat/tensorflow_stub/dtypes.py:544: FutureWarning: Passing (type, 1) or '1type' as a synonym of type is deprecated; in a future version of numpy, it will be understood as (type, (1,)) / '(1,)type'.\n",
+      "/home/bithika/local/anaconda3/lib/python3.7/site-packages/tensorboard/compat/tensorflow_stub/dtypes.py:544: FutureWarning: Passing (type, 1) or '1type' as a synonym of type is deprecated; in a future version of numpy, it will be understood as (type, (1,)) / '(1,)type'.\n",
       "  _np_quint16 = np.dtype([(\"quint16\", np.uint16, 1)])\n",
-      "/home/bithika/local/anaconda3/envs/tf_gpu/lib/python3.7/site-packages/tensorboard/compat/tensorflow_stub/dtypes.py:545: FutureWarning: Passing (type, 1) or '1type' as a synonym of type is deprecated; in a future version of numpy, it will be understood as (type, (1,)) / '(1,)type'.\n",
+      "/home/bithika/local/anaconda3/lib/python3.7/site-packages/tensorboard/compat/tensorflow_stub/dtypes.py:545: FutureWarning: Passing (type, 1) or '1type' as a synonym of type is deprecated; in a future version of numpy, it will be understood as (type, (1,)) / '(1,)type'.\n",
       "  _np_qint32 = np.dtype([(\"qint32\", np.int32, 1)])\n",
-      "/home/bithika/local/anaconda3/envs/tf_gpu/lib/python3.7/site-packages/tensorboard/compat/tensorflow_stub/dtypes.py:550: FutureWarning: Passing (type, 1) or '1type' as a synonym of type is deprecated; in a future version of numpy, it will be understood as (type, (1,)) / '(1,)type'.\n",
+      "/home/bithika/local/anaconda3/lib/python3.7/site-packages/tensorboard/compat/tensorflow_stub/dtypes.py:550: FutureWarning: Passing (type, 1) or '1type' as a synonym of type is deprecated; in a future version of numpy, it will be understood as (type, (1,)) / '(1,)type'.\n",
       "  np_resource = np.dtype([(\"resource\", np.ubyte, 1)])\n"
      ]
     }
@@ -120,13 +117,38 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2019-10-23T03:13:19.176628Z",
+     "start_time": "2019-10-23T03:13:18.991740Z"
+    }
+   },
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'base_dir' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-9-da7a938fd9ae>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mos\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0msystem\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"mkdir -p {} {}\"\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mformat\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mbase_dir\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mcheckpoint_dir\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m: name 'base_dir' is not defined"
+     ]
+    }
+   ],
+   "source": [
+    "os.system(\"mkdir -p {} {}\".format(base_dir, checkpoint_dir))"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 2,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2019-10-21T06:16:39.864651Z",
      "start_time": "2019-10-21T06:16:39.585080Z"
-    },
-    "hidden": true
+    }
    },
    "outputs": [],
    "source": [
@@ -167,7 +189,7 @@
     "# define the total number of epochs to train for along with the\n",
     "# initial learning rate and batch size\n",
     "NUM_EPOCHS = 5 # training iterations\n",
-    "INIT_LR = 1e-1 # initial learning rate\n",
+    "INIT_LR = 1e-3 # initial learning rate\n",
     "BATCH_SIZE = 32 # batch size of 32 is good for CPUs, take 64 for GPUs\n",
     "\n",
     "(HEIGHT, WIDTH) = (224, 224)# rescale images (higher performance; crop images)\n",
@@ -182,8 +204,7 @@
     "ExecuteTime": {
      "end_time": "2019-10-09T16:24:43.937647Z",
      "start_time": "2019-10-09T16:24:43.932026Z"
-    },
-    "heading_collapsed": true
+    }
    },
    "source": [
     "## Explore training data"
@@ -196,14 +217,11 @@
     "ExecuteTime": {
      "end_time": "2019-10-21T06:16:39.910453Z",
      "start_time": "2019-10-21T06:16:39.890382Z"
-    },
-    "hidden": true
+    }
    },
    "outputs": [],
    "source": [
     "# training, validation, and testing directories\n",
-    "TRAIN_PATH = os.path.sep.join([base_dir, \"training\"])\n",
-    "VAL_PATH = os.path.sep.join([base_dir, \"validation\"])\n",
     "VALTRAIN_PATH = os.path.sep.join([base_dir, \"VALTRAIN\"])\n",
     "TEST_PATH = os.path.sep.join([base_dir, \"TEST\"])"
    ]
@@ -215,8 +233,7 @@
     "ExecuteTime": {
      "end_time": "2019-10-21T06:16:40.580918Z",
      "start_time": "2019-10-21T06:16:39.911902Z"
-    },
-    "hidden": true
+    }
    },
    "outputs": [],
    "source": [
@@ -229,9 +246,7 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "source": [
     " we need to make a dataframe contanint the every training and validation example image's path, id and labels\n"
    ]
@@ -243,8 +258,7 @@
     "ExecuteTime": {
      "end_time": "2019-10-21T06:16:40.743099Z",
      "start_time": "2019-10-21T06:16:40.582145Z"
-    },
-    "hidden": true
+    }
    },
    "outputs": [],
    "source": [
@@ -259,8 +273,7 @@
     "ExecuteTime": {
      "end_time": "2019-10-21T06:16:40.763497Z",
      "start_time": "2019-10-21T06:16:40.744182Z"
-    },
-    "hidden": true
+    }
    },
    "outputs": [],
    "source": [
@@ -280,8 +293,7 @@
     "ExecuteTime": {
      "end_time": "2019-10-21T06:16:41.304702Z",
      "start_time": "2019-10-21T06:16:40.765275Z"
-    },
-    "hidden": true
+    }
    },
    "outputs": [],
    "source": [
@@ -296,8 +308,7 @@
     "ExecuteTime": {
      "end_time": "2019-10-21T06:16:41.331471Z",
      "start_time": "2019-10-21T06:16:41.306093Z"
-    },
-    "hidden": true
+    }
    },
    "outputs": [
     {
@@ -374,8 +385,7 @@
     "ExecuteTime": {
      "end_time": "2019-10-21T06:16:41.664268Z",
      "start_time": "2019-10-21T06:16:41.333050Z"
-    },
-    "hidden": true
+    }
    },
    "outputs": [],
    "source": [
@@ -389,9 +399,7 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "source": [
     "Choose 6 random positive and negative examples, find their respective path and then display them in subplot"
    ]
@@ -403,8 +411,7 @@
     "ExecuteTime": {
      "end_time": "2019-10-21T06:16:41.696372Z",
      "start_time": "2019-10-21T06:16:41.665346Z"
-    },
-    "hidden": true
+    }
    },
    "outputs": [],
    "source": [
@@ -423,8 +430,7 @@
     "ExecuteTime": {
      "end_time": "2019-10-21T06:16:41.718962Z",
      "start_time": "2019-10-21T06:16:41.697569Z"
-    },
-    "hidden": true
+    }
    },
    "outputs": [],
    "source": [
@@ -454,8 +460,7 @@
     "ExecuteTime": {
      "end_time": "2019-10-21T06:16:42.622696Z",
      "start_time": "2019-10-21T06:16:41.720034Z"
-    },
-    "hidden": true
+    }
    },
    "outputs": [
     {
@@ -491,9 +496,7 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "heading_collapsed": true
-   },
+   "metadata": {},
    "source": [
     "## Split train data into training and validation datasets "
    ]
@@ -504,8 +507,7 @@
     "ExecuteTime": {
      "end_time": "2019-10-15T15:53:10.769516Z",
      "start_time": "2019-10-15T15:53:10.585452Z"
-    },
-    "hidden": true
+    }
    },
    "source": [
     "Classic way with ```train_test_split```"
@@ -513,21 +515,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 1,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-10-21T06:16:43.302508Z",
-     "start_time": "2019-10-21T06:16:42.623815Z"
-    },
-    "hidden": true
+     "end_time": "2019-10-21T20:38:59.206614Z",
+     "start_time": "2019-10-21T20:38:59.158228Z"
+    }
    },
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "There are 220025 training examples.\n",
-      "There are 57458 test examples.\n"
+     "ename": "NameError",
+     "evalue": "name 'paths' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-1-4e18ec1ff075>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mTestPaths\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mlist\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mpaths\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mlist_images\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mTEST_PATH\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;31m# list files inside\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      2\u001b[0m \u001b[0mValTrainPaths\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mlist\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mpaths\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mlist_images\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mVALTRAIN_PATH\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;31m# list files inside\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"There are \"\u001b[0m \u001b[0;34m+\u001b[0m \u001b[0mstr\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mlen\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mValTrainPaths\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;34m+\u001b[0m \u001b[0;34m\" training examples.\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"There are \"\u001b[0m \u001b[0;34m+\u001b[0m \u001b[0mstr\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mlen\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mTestPaths\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;34m+\u001b[0m \u001b[0;34m\" test examples.\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'paths' is not defined"
      ]
     }
    ],
@@ -544,8 +548,7 @@
     "ExecuteTime": {
      "end_time": "2019-10-16T16:44:45.434892Z",
      "start_time": "2019-10-16T16:44:45.390513Z"
-    },
-    "hidden": true
+    }
    },
    "source": [
     "Split 20% of training dataset into validation dataset\n"
@@ -558,8 +561,7 @@
     "ExecuteTime": {
      "end_time": "2019-10-21T06:16:43.681837Z",
      "start_time": "2019-10-21T06:16:43.303610Z"
-    },
-    "hidden": true
+    }
    },
    "outputs": [],
    "source": [
@@ -567,6 +569,15 @@
     "TrainPaths, ValidPaths = train_test_split(path_labels, test_size = 0.2,random_state = 220, stratify = path_labels['label']) # split pandas\n",
     "# dataframe 20% of valtrain data is saved as validation data using the random seed defined \n",
     "# above and stratified by 'labels' in panda dataframe\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "TrainP"
    ]
   },
   {
@@ -857,7 +868,7 @@
    ],
    "source": [
     "#compile the model\n",
-    "model.compile(optimizers.Adam(0.001), loss = \"binary_crossentropy\",\n",
+    "model.compile(optimizers.Adam(INIT_LR), loss = \"binary_crossentropy\",\n",
     "              metrics = [\"accuracy\"])"
    ]
   },
@@ -916,7 +927,11 @@
    },
    "outputs": [],
    "source": [
-    "# checkpoint \n",
+    "# checkpoint\n",
+    "# IMP for userdefined callbacks: \n",
+    "# alternative solution is to pickle the callback instance every time we save a \n",
+    "# checkpoint, then we can load this pickle when resuming and reconstruct the original\n",
+    "# callback with all its correct values. \n",
     "filepath = os.path.join(checkpoint_dir, \"saved-model-{epoch:02d}-{val_acc:.3f}.hdf5\")\n",
     "# Setting 'save_weights_only' to False in the Keras callback 'ModelCheckpoint' will \n",
     "# save the full model\n",
@@ -1160,18 +1175,26 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "## Resume from checkpoints"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# initialize callbacks:\n",
+    "checkpoint_callback = ModelCheckpoint( filepath = \"saved-model-{epoch:02d}-{val_acc:.3f}.hdf5\")\n",
+    "# Stop training when a monitored quantity has stopped improving.\n",
+    "early_stopper = EarlyStopping(monitor='val_loss', patience=3, verbose=2,\n",
+    "                              restore_best_weights=True)\n",
+    "# Reduce learning rate when a metric has stopped improving.\n",
+    "reduce = ReduceLROnPlateau(monitor='val_loss', patience=1, verbose=1, factor=0.1)"
+   ]
   },
   {
    "cell_type": "code",
